k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: freelancercrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/enock97/freelancercrm-backend:latest
          ports:
            - containerPort: 5000
          lifecycle:
            postStart:
              exec:
                command: ["sh", "-c", "npx prisma migrate deploy || true"]
