k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: freelancercrm
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      imagePullSecrets:               # <- secret med PAT for GHCR
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/enock97/freelancercrm-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
