k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: freelancercrm
spec:
  type: NodePort          
  selector:
    app: frontend
  ports:
    - port: 80            # internt port 80
      targetPort: 3000    # kontainer-port
      nodePort: 30080
